[package]
name = "plyband"
version = "0.1.0"
authors = ["Nat Wilson <natw@fortyninemaps.com>"]
edition = "2018"

[dependencies]

clap = "2.32.0"
# gdal = "0.5.0"
gdal-sys = "0.2.0"
gdal = { git = "https://github.com/fortyninemaps/georust-gdal", branch = "public-gdaltype" }
gdal-typed-rasterband = { git = "https://github.com/fortyninemaps/gdal-typed-rasterband", branch = "master" }
